--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13061,7 +13061,7 @@ Learn more at g.co/pixel/faceunlock."</string>
     <!-- Summary for prevent ringing setting -->
     <string name="prevent_ringing_option_mute_summary">Mute</string>
     <!-- Summary for prevent ringing setting when the option itself is unavailable. [CHAR LIMIT=NONE] -->
-    <string name="prevent_ringing_option_unavailable_lpp_summary">To enable, first change \"Press &amp; hold power button\" to the power menu.</string>
+    <string name="prevent_ringing_option_unavailable_lpp_summary">To enable, first change \"Press &amp; hold power button\" to the global actions</string>
 
     <!-- Title for detail page of wifi network [CHAR LIMIT=30] -->
     <string name="pref_title_network_details">Network details</string>
@@ -13828,20 +13828,20 @@ Learn more at g.co/pixel/faceunlock."</string>
     <!-- Power menu setting section title for selecting the press and hold power button behavior. [CHAR LIMIT=60] -->
     <string name="power_menu_long_press_category_title">Press &amp; hold power button to access</string>
     <!-- Power menu setting option to make press and hold power button to open Power Menu. [CHAR LIMIT=60] -->
-    <string name="power_menu_long_press_for_power_menu_title">Power menu</string>
+    <string name="power_menu_long_press_for_power_menu_title">Global actions</string>
     <!-- Power menu setting option to make press and hold power button to open Assistant. [CHAR LIMIT=60] -->
     <string name="power_menu_long_press_for_assistant_title">Digital assistant</string>
 
     <!-- Power menu setting summary to describe press and hold power button will open Assistant. [CHAR LIMIT=NONE] -->
     <string name="power_menu_summary_long_press_for_assistant">Access digital assistant</string>
     <!-- Power menu setting summary to describe press and hold power button will open Power Menu. [CHAR LIMIT=NONE] -->
-    <string name="power_menu_summary_long_press_for_power_menu">Access power menu</string>
+    <string name="power_menu_summary_long_press_for_power_menu">Access global actions</string>
 
     <!-- Power menu setting privacy no secure screen lock set [CHAR_LIMIT=NONE] -->
     <string name="lockscreen_privacy_not_secure">To use, first set a screen lock</string>
 
     <!-- Power menu explanation to press power and volume up to show power menu. [CHAR LIMIT=NONE] -->
-    <string name="power_menu_power_volume_up_hint">Power menu:\nPress the power button and the volume up button at the same time</string>
+    <string name="power_menu_power_volume_up_hint">Global actions:\nPress the power button and the volume up button at the same time</string>
     <!-- Power menu explanation where to find prevent ringing option. [CHAR LIMIT=NONE] -->
     <string name="power_menu_power_prevent_ringing_hint">Prevent ringing:\nPress a volume button for the shortcut</string>
 
