--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -5430,7 +5430,7 @@ Pelajari lebih lanjut di g.co/pixel/faceunlock."</string>
     <string name="prevent_ringing_option_none" msgid="7776676007180834163">"Jangan lakukan apa pun"</string>
     <string name="prevent_ringing_option_vibrate_summary" msgid="3435299885425754304">"Bergetar"</string>
     <string name="prevent_ringing_option_mute_summary" msgid="3939350522269337013">"Bisukan"</string>
-    <string name="prevent_ringing_option_unavailable_lpp_summary" msgid="8070356204398144241">"Untuk mengaktifkan, ubah \"Tekan &amp; tahan tombol daya\" ke menu daya terlebih dahulu."</string>
+    <string name="prevent_ringing_option_unavailable_lpp_summary" msgid="8070356204398144241">"Untuk mengaktifkan, ubah tekan &amp; tahan tombol daya ke aksi global terlebih dahulu."</string>
     <string name="pref_title_network_details" msgid="7329759534269363308">"Detail jaringan"</string>
     <string name="about_phone_device_name_warning" msgid="1938930553285875166">"Nama perangkat terlihat oleh aplikasi di ponsel, dan juga mungkin dilihat oleh orang lain saat Anda menghubungkan ke perangkat Bluetooth atau jaringan Wi-Fi, atau saat menyiapkan hotspot Wi-Fi."</string>
     <string name="devices_title" msgid="649715719278562515">"Perangkat"</string>
@@ -5720,12 +5720,12 @@ Pelajari lebih lanjut di g.co/pixel/faceunlock."</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"kartu &amp; tiket"</string>
     <string name="power_menu_setting_name" msgid="2394440932633137229">"Tekan &amp; tahan tombol daya"</string>
     <string name="power_menu_long_press_category_title" msgid="1051146091093775002">"Tekan &amp; tahan tombol daya untuk mengakses"</string>
-    <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Menu daya"</string>
+    <string name="power_menu_long_press_for_power_menu_title" msgid="477584639843663599">"Aksi global"</string>
     <string name="power_menu_long_press_for_assistant_title" msgid="6557738348262616455">"Asisten digital"</string>
     <string name="power_menu_summary_long_press_for_assistant" msgid="32706459458422952">"Mengakses asisten digital"</string>
-    <string name="power_menu_summary_long_press_for_power_menu" msgid="7617247135239683710">"Mengakses menu daya"</string>
+    <string name="power_menu_summary_long_press_for_power_menu" msgid="7617247135239683710">"Mengakses aksi global"</string>
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Untuk menggunakannya, setel kunci layar terlebih dahulu"</string>
-    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Menu daya:\nTekan tombol daya dan tombol naikkan volume secara bersamaan"</string>
+    <string name="power_menu_power_volume_up_hint" msgid="5619917593676125759">"Aksi global:\nTekan tombol daya dan tombol naikkan volume secara bersamaan"</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="1169955014711158873">"Mencegah dering:\nTekan tombol volume untuk menggunakan pintasan"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_title" msgid="1626808509158422185">"Durasi tekan &amp; tahan"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_summary" msgid="7550610071666801935">"Sesuaikan sensitivitas dengan memilih durasi menekan &amp; menahan tombol daya"</string>
